--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,20 +4,20 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>SeleniumFramework.tests.ErrorValidationsTest</td>
+<td>SeleniumFramework.tests.SubmitOrderTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LoginErrorValidation</td>
-<td>ErrorHandling </td>
-</tr>
+<td>OrderHistoryTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>ProductErrorValifation</td>
-<td>&nbsp;</td></tr>
+<td>SubmitOrder</td>
+<td>Purchase </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -25,8 +25,16 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>launchApplication</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
