--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,41 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>SeleniumFramework.tests.ErrorValidationsTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>LoginErrorValidation</td>
+<td>ErrorHandling </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ProductErrorValifation</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>launchApplication</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>SeleniumFramework.tests.SubmitOrderTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -11,13 +46,13 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>OrderHistoryTest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>SubmitOrder</td>
 <td>Purchase </td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>OrderHistoryTest</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
