--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Purchase</td><td>SubmitOrderTest.SubmitOrder(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@38cee291]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>ErrorHandling</td><td>ErrorValidationsTest.LoginErrorValidation()[pri:0, instance:SeleniumFramework.tests.ErrorValidationsTest@3a0baae5]<br/></td></tr>
+<tr><td>Purchase</td><td>SubmitOrderTest.SubmitOrder(java.util.HashMap)[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]<br/></td></tr>
 </table>
