--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9da87b">  <td>23/04/12 13:21:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@38cee291]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1916575798</td>   <td></td> </tr>
-<tr bgcolor="9da87b">  <td>23/04/12 13:20:49</td>   <td>-16429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@38cee291]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1916575798</td>   <td></td> </tr>
-<tr bgcolor="a9b0e6">  <td>23/04/12 13:20:59</td>   <td>-6272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.SubmitOrder(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@38cee291]">SubmitOrder</td> 
-  <td>TestNG-tests-1@1916575798</td>   <td></td> </tr>
-<tr bgcolor="9da87b">  <td>23/04/12 13:20:49</td>   <td>-16429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@38cee291]">&gt;&gt;launchApplication</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1916575798</td>   <td></td> </tr>
-<tr bgcolor="a9b0e6">  <td>23/04/12 13:20:59</td>   <td>-6272</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.SubmitOrder(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@38cee291]">SubmitOrder</td> 
-  <td>TestNG-tests-1@1916575798</td>   <td></td> </tr>
-<tr bgcolor="9da87b">  <td>23/04/12 13:21:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@38cee291]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1916575798</td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:42:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1504937617</td>   <td></td> </tr>
+<tr bgcolor="799bef">  <td>23/04/20 15:42:14</td>   <td>8357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.OrderHistoryTest()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]">OrderHistoryTest</td> 
+  <td></td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:42:14</td>   <td>8226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1504937617</td>   <td></td> </tr>
+<tr bgcolor="799bef">  <td>23/04/20 15:42:10</td>   <td>3870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.SubmitOrder(java.util.HashMap)[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]">SubmitOrder</td> 
+  <td>TestNG-tests-1@1504937617</td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:42:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1504937617</td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:42:14</td>   <td>8226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1504937617</td>   <td></td> </tr>
+<tr bgcolor="799bef">  <td>23/04/20 15:42:10</td>   <td>3870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SubmitOrderTest.SubmitOrder(java.util.HashMap)[pri:0, instance:SeleniumFramework.tests.SubmitOrderTest@3d3e5463]">SubmitOrder</td> 
+  <td>TestNG-tests-1@1504937617</td>   <td></td> </tr>
+<tr bgcolor="7de2d6">  <td>23/04/20 15:41:57</td>   <td>-8661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.ProductErrorValifation()[pri:0, instance:SeleniumFramework.tests.ErrorValidationsTest@3a0baae5]">ProductErrorValifation</td> 
+  <td>TestNG-tests-2@1636291061</td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:41:53</td>   <td>-12873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.ErrorValidationsTest@3a0baae5]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1636291061</td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:41:53</td>   <td>-12873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchApplication()[pri:0, instance:SeleniumFramework.tests.ErrorValidationsTest@3a0baae5]">&gt;&gt;launchApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1636291061</td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:42:11</td>   <td>5825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.ErrorValidationsTest@3a0baae5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1636291061</td>   <td></td> </tr>
+<tr bgcolor="7de2d6">  <td>23/04/20 15:41:51</td>   <td>-15131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ErrorValidationsTest.LoginErrorValidation()[pri:0, instance:SeleniumFramework.tests.ErrorValidationsTest@3a0baae5]">LoginErrorValidation</td> 
+  <td>TestNG-tests-2@1636291061</td>   <td></td> </tr>
+<tr bgcolor="8da3ce">  <td>23/04/20 15:42:11</td>   <td>5825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:SeleniumFramework.tests.ErrorValidationsTest@3a0baae5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1636291061</td>   <td></td> </tr>
 </table>
